fixing sonnar issue
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>